syntax = "proto3";

package occult;

service Occult {
  rpc InsertRPC(WriteMsg) returns (ShardTsMsg);
  rpc UpdateRPC(WriteMsg) returns (ShardTsMsg);
  rpc ReadRPC(KeyMsg) returns (EntryMsg);
  rpc DeleteRPC(KeyMsg) returns (ShardTsMsg);
  rpc ReplicateRPC(ReplicateMsg) returns (EmptyMsg);
}

message EmptyMsg {}

message ShardTsMsg { uint64 shardstamp = 1; }

message WriteMsg {
  string key = 1;
  bytes value = 2;
  uint64 deps = 3;
}

message KeyMsg { string key = 1; }

message EntryMsg {
  bytes value = 1;
  uint64 deps = 2;
  uint64 shardstamp = 3;
}

enum Command {
  Insert = 0;
  Update = 1;
  Delete = 2;
}

message ReplicateMsg {
  Command command = 1;
  string key = 2;
  bytes value = 3;
  uint64 deps = 4;
  uint64 shardstamp = 5;
}